@@ -3,6 +3,8 @@ Revision history for WebService-NFSN
 0.09   NOT
 	- Cleaned up usage of eval and $@ (using Try::Tiny where possible)
 
+	- Changed examples/nfsn.pl to get credentials from .nfsn-api
+
 	- Switched from Digest::SHA1 to Digest::SHA, because the
 	  latter became a core module in Perl 5.10.
 
